refactor about template to use base template

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My TV Collection</title>
-</head>
-<body>
-  <h1>About My TV Collection</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<h1>About My TV Collection</h1>
+<hr />
+<p class="page-content">
+  I've created this app to help my partner and I keep track of the shows we're currently watching.
+</p>
+
+{% endblock %}
