add placeholder CatCollector images

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,7 +9,7 @@
   <link
     rel="shortcut icon"
     type="image/png"
-    href=""
+    href="{% static 'images/splash.svg' %}"
   >
   <title>My TV Collection</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
@@ -21,7 +21,7 @@
     <div class="header-logo-container">
       <a href="/">
         <img 
-          src=""
+          src="{% static 'images/header-logo.svg' %}"
           alt="The Cat Collector Logo"
         >
       </a>
