update placeholder favi and logo images

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,7 +9,7 @@
   <link
     rel="shortcut icon"
     type="image/png"
-    href="{% static 'images/splash.svg' %}"
+    href="{% static 'images/retro-tv-favi.png' %}"
   >
   <title>My TV Collection</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
@@ -21,8 +21,8 @@
     <div class="header-logo-container">
       <a href="/">
         <img 
-          src="{% static 'images/header-logo.svg' %}"
-          alt="The Cat Collector Logo"
+          src="{% static 'images/retro-tv-favi.png' %}"
+          alt="Temp My TV Collection Logo"
         >
       </a>
       <h1>My TV Collection</h1>
