add basic styling to home template

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}"/> {% endcomment %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}"/>
 {% endblock %}
 
 {% block content %}
@@ -14,7 +14,7 @@
       alt="Temp My TV Collection Logo"
     >
   </div>
-  <h1>My TV Collection</h1>
+  <h2>My TV Collection</h2>
 </section>
 
 {% endblock %}
