--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,7 +29,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/shows">All Shows</a></li>
+        <li><a href="{% url 'show-index' %}">All Shows</a></li>
         <li><a href="/about">About</a></li>
       </ul>
     </nav>
