refactor base.html about link to use URL template tag

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -30,7 +30,7 @@
     <nav>
       <ul>
         <li><a href="{% url 'show-index' %}">All Shows</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
   </header>
