refactor home link on base.html header logo using URL template tag

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,7 +19,7 @@
 <body>
   <header>
     <div class="header-logo-container">
-      <a href="/">
+      <a href="{% url 'home' %}">
         <img 
           src="{% static 'images/retro-tv-favi.png' %}"
           alt="Temp My TV Collection Logo"
