--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,8 +29,9 @@
     </div>
     <nav>
       <ul>
-        <li><a href="{% url 'show-index' %}">All Shows</a></li>
-        <li><a href="{% url 'about' %}">About</a></li>
+        <li><a href="{% url 'show-index' %}">All Shows 🍿</a></li>
+        <li><a href="{% url 'show-create' %}">Add a Show 🎞️</a></li>
+        <li><a href="{% url 'about' %}">About 📺</a></li>
       </ul>
     </nav>
   </header>
