--- a/main_app/templates/shows/detail.html
+++ b/main_app/templates/shows/detail.html
@@ -3,10 +3,20 @@
 
 {% block head %}
 <link 
+  href="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.css" 
+  rel="stylesheet" 
+/>
+<link rel="stylesheet" href="{% static 'css/mcdp.css' %}">
+<script 
+  src="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.js"
+>
+</script>
+<link 
   rel="stylesheet" 
   type="text/css" 
   href="{% static 'css/shows/show-detail.css' %}"
 />
+<script defer src="{% static 'js/show-detail.js' %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -56,7 +66,7 @@
       <tbody>
         {% for episode in show.episode_set.all %}
           <tr>
-            <td>{{ episode.watch_date }}</td>
+            <td>{{ episode.date }}</td>
             <td>S{{ episode.season }}.E{{ episode.episode_num }} - "{{ episode.name }}"</td>
           </tr>
         {% endfor %}
