update header images on shows/index template

--- a/main_app/templates/shows/index.html
+++ b/main_app/templates/shows/index.html
@@ -13,10 +13,11 @@
 
 <section class="page-header">
   <h1>Show List</h1>
-  <img src="{% static 'images/cool-cat.svg' %}" alt="A cool cat" />
-  <img src="{% static 'images/happy-cat.svg' %}" alt="A happy cat" />
-  <img src="{% static 'images/teacup-cat.svg' %}" alt="A cat in a teacup" />
-  <img src="{% static 'images/cat-in-box.svg' %}" alt="A cat in a box" />
+  <img src="{% static 'images/remote-control.png' %}" alt="A remote control" />
+  <img src="{% static 'images/pastel-tv.png' %}" alt="A TV" />
+  <img src="{% static 'images/popcorn.png' %}" alt="A bucket of popcorn" />
+  <img src="{% static 'images/video-playlist.png' %}" alt="A stack of video icons" />
+  <img src="{% static 'images/tardis.png' %}" alt="A small TARDIS" />
 </section>
 
 <section class="card-container">
