--- a/main_app/templates/shows/detail.html
+++ b/main_app/templates/shows/detail.html
@@ -65,10 +65,9 @@
   <section class="episodes">
     <div class="subsection-title">
       <h2>Episodes</h2>
-      <img 
-        src="{% static 'images/retro-tv-favi.png' %}"
-        alt="Temp My TV Collection Logo"
-      >
+      <img src="{% static 'images/remote-control.png' %}" alt="A remote control" />
+      <img src="{% static 'images/pastel-tv.png' %}" alt="A TV" />
+      <img src="{% static 'images/video-playlist.png' %}" alt="A stack of video icons" />
     </div>
     <h3>Add an Episode 📼</h3>
     <form 
