update header icons

--- a/main_app/templates/main_app/show_form.html
+++ b/main_app/templates/main_app/show_form.html
@@ -13,10 +13,9 @@
   {% else %}
     <h1>Add a Show</h1>
   {% endif %}
-  <img 
-    src="{% static 'images/retro-tv-favi.png' %}"
-    alt="Temp My TV Collection Logo"
-  >
+  <img src="{% static 'images/remote-control.png' %}" alt="A remote control" />
+  <img src="{% static 'images/pastel-tv.png' %}" alt="A TV" />
+  <img src="{% static 'images/video-playlist.png' %}" alt="A stack of video icons" />
 </div>
 <form action="" method="post" class="form-container">
   {% csrf_token %}
