update header icons

--- a/main_app/templates/main_app/show_confirm_delete.html
+++ b/main_app/templates/main_app/show_confirm_delete.html
@@ -5,10 +5,8 @@
 
 <div class="page-header">
   <h1>Delete Show?</h1>
-  <img 
-    src="{% static 'images/retro-tv-favi.png' %}"
-    alt="Temp My TV Collection Logo"
-  >
+  <img src="{% static 'images/remote-control.png' %}" alt="A remote control" />
+  <img src="{% static 'images/pastel-tv.png' %}" alt="A TV" />
 </div>
 <h2>Are you sure you want to delete {{ show.name }}?</h2>
 
