--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -197,7 +197,8 @@ nav li {
   }
 
   .header-logo-container {
-    width: 213px;
+    display: flex;
+    width: 256px;
   }
 
   .page-header h1 {
@@ -250,9 +251,10 @@ nav li {
 
   .header-logo-container {
     /* visual fix to help align logo */
+    display: flex;
     padding-top: 6px;
     width: 256px;
-    height: 35px;
+    height: 70px;
   }
 
   @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
