--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -17,27 +17,29 @@
   {% endblock %}
 </head>
 <body>
-  <header>
-    <div class="header-logo-container">
-      <a href="{% url 'home' %}">
-        <img 
-          src="{% static 'images/retro-tv-favi.png' %}"
-          alt="Temp My TV Collection Logo"
-        >
-      </a>
-      <h1>My TV Collection</h1>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="{% url 'show-index' %}">All Shows 🍿</a></li>
-        <li><a href="{% url 'show-create' %}">Add a Show 🎞️</a></li>
-        <li><a href="{% url 'about' %}">About 📺</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    {% block content %}
-    {% endblock %}
-  </main>
+  <div style="background-image: url({% static 'images/tv-snow.jpg' %})">
+    <header>
+      <div class="header-logo-container">
+        <a href="{% url 'home' %}">
+          <img 
+            src="{% static 'images/retro-tv-favi.png' %}"
+            alt="Temp My TV Collection Logo"
+          >
+        </a>
+        <h1>My TV Collection</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="{% url 'show-index' %}">All Shows 🍿</a></li>
+          <li><a href="{% url 'show-create' %}">Add a Show 🎞️</a></li>
+          <li><a href="{% url 'about' %}">About 📺</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      {% block content %}
+      {% endblock %}
+    </main>
+  </div>
 </body>
 </html>
