--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -18,6 +18,10 @@ html {
 }
 
 body {
+  /* background-image: url('/main_app/static/images/tv-snow.jpg'); */
+  background-size: auto;
+  background-position: center;
+  background-color: black;
   margin: 0;
   display: flex;
   flex-direction: column;
