--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -30,11 +30,11 @@ body {
     'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 
     'Helvetica Neue', sans-serif;
   min-height: 100vh;
-  --nav-bg: rgba(104, 197, 248, .7);
-  --nav-bg-ff: rgba(104, 197, 248, .9);
-  --borders: rgb(36, 116, 248) solid 2px;
-  --text-color: rgb(17, 20, 17);
-  --link-hover-color: rgb(16, 56, 158);
+  --nav-bg: rgba(151, 79, 251, 0.7);
+  --nav-bg-ff: rgba(151, 79, 251, .9);
+  --borders: rgb(97, 37, 180) solid 2px;
+  --text-color: rgb(18, 3, 39);
+  --link-hover-color: rgb(246, 243, 251);
   --button-bg: rgb(245, 245, 245);
   --button-bg-hover: rgb(226, 226, 226);
   --submit: rgb(26, 128, 0);
@@ -269,7 +269,7 @@ nav li {
 
     nav,
     .header-logo-container {
-      background: rgba(104, 197, 248, .6);
+      background: rgba(151, 79, 251, 0.65);
       -webkit-backdrop-filter: blur(3px);
       backdrop-filter: blur(3px);
     }
