set reusable card bg color var, change card bg color on shows/index template

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -48,6 +48,7 @@ body {
   --font-l: 1.8rem;
   --font-reg: 1.6rem;
   --card-border-radius: 6px;
+  --card-bg-color: rgb(221, 218, 225);
 }
 
 header {
