--- a/main_app/static/css/shows/show-index.css
+++ b/main_app/static/css/shows/show-index.css
@@ -10,6 +10,7 @@
   margin: 10px;
   border: var(--borders);
   box-shadow: var(--card-box-shadow);
+  background-color: var(--card-bg-color);
 }
 
 .card-content {
