--- a/main_app/static/css/shows/show-detail.css
+++ b/main_app/static/css/shows/show-detail.css
@@ -105,6 +105,7 @@
   flex-direction: column;
   justify-content: center;
   margin-bottom: 20px;
+  background-color: var(--card-bg-color);
 }
 
 .subsection-title img {
