--- a/main_app/static/css/shows/show-detail.css
+++ b/main_app/static/css/shows/show-detail.css
@@ -4,6 +4,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: rgb(221, 218, 225, .5);
+  width: 100%;
+  margin-top: 50px;
 }
 
 .show-img {
