--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -16,7 +16,7 @@
   <i>My TV Collection</i> was inspired by my partner and I's love of television, and the joy that comes from watching TV together. We love experiencing new shows together and sharing our favorite shows with each other. That said, our list of Shows to Watch has only grown over time, and with our penchant for watching multiple shows at once, it can be hard to keep track of the last episode we saw for each different show. Enter <i>My TV Collection</i>!
 </p>
 <p class="page-content">
-  <i>My TV Collection</i> is very simple - you can add TV shows to a Shows list, view details about each show, and log episodes you've watched for each show. There are quite a few exciting ice box features in the works for <i>My TV Collection</i> so stay tuned!
+  <i>My TV Collection</i> is very simple - you can add TV shows to a Shows list, view details about each show, and log episodes you've watched for each show. There are quite a few exciting ice box features in the works for <i>My TV Collection</i>, so stay tuned!
 </p>
 
 {% endblock content %}
