--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -174,7 +174,9 @@ nav li {
 }
 
 .page-content {
-  font-size: var(--font-reg);
+  font-size: var(--font-xl);
+  background-color: rgb(221, 218, 225, .65);
+  padding: 5px;
 }
 
 @media only screen and (min-width: 768px) {
