--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  background-color: rgb(221, 218, 225, .75);
+  padding: 15px;
 }
 
 table {
