--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -4,6 +4,9 @@
   width: 100%;
   background-color: rgb(221, 218, 225, .75);
   padding: 15px;
+  border: var(--borders);
+  box-shadow: var(--card-box-shadow);
+  border-radius: var(--card-border-radius);
 }
 
 table {
