add text and drop shadows to logo on home page

--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -21,6 +21,7 @@ main > section {
 
 .logo-container {
   max-width: 375px;
+  text-shadow: #d5d3d3 1px 0 15px;
 }
 
 .logo-container h2 {
@@ -35,6 +36,7 @@ main > section {
 .tv-container img {
   height: 100%;
   width: 100%;
+  filter: drop-shadow(0 0 1rem #d5d3d3);
 }
 
 .login {
