--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -31,7 +31,7 @@ body {
     'Helvetica Neue', sans-serif;
   min-height: 100vh;
   --nav-bg: rgba(151, 79, 251, 0.7);
-  --nav-bg-ff: rgba(151, 79, 251, .9);
+  --nav-bg-ff: rgba(151, 79, 251, 0.9);
   --borders: rgb(97, 37, 180) solid 2px;
   --text-color: rgb(18, 3, 39);
   --link-hover-color: rgb(246, 243, 251);
@@ -41,7 +41,7 @@ body {
   --warn: rgb(255, 102, 0);
   --danger: rgb(220, 20, 30);
   --secondary: rgb(57, 57, 57);
-  --card-box-shadow: 5px 5px 6px -1px #AAA;
+  --card-box-shadow: 5px 5px 6px -1px rgb(151, 79, 251, .75);
   --font-xtreme: 4.2rem;
   --font-xxl: 3.6rem;
   --font-xl: 2.4rem;
