--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -178,9 +178,12 @@ nav li {
 }
 
 .page-content {
-  font-size: var(--font-xl);
+  font-size: var(--font-l);
   background-color: rgb(221, 218, 225, .75);
-  padding: 5px;
+  padding: 15px;
+  border: var(--borders);
+  box-shadow: var(--card-box-shadow);
+  border-radius: var(--card-border-radius);
 }
 
 @media only screen and (min-width: 768px) {
