put content in page-content div so that styling can be applied

--- a/main_app/templates/main_app/show_confirm_delete.html
+++ b/main_app/templates/main_app/show_confirm_delete.html
@@ -8,17 +8,19 @@
   <img src="{% static 'images/remote-control.png' %}" alt="A remote control" />
   <img src="{% static 'images/pastel-tv.png' %}" alt="A TV" />
 </div>
-<h2>Are you sure you want to delete {{ show.name }}?</h2>
-
-<form action="" method="post" class="form">
-  {% csrf_token %}
-  <a 
-    href="{% url 'show-detail' show.id %}"
-    class="btn secondary"
-  >
-    Cancel
-  </a>
-  <button type="submit" class="btn danger">Delete {{ show.name }}</button>
-</form>
+<div class="page-content">
+  <h2>Are you sure you want to delete {{ show.name }}?</h2>
+  
+  <form action="" method="post" class="form">
+    {% csrf_token %}
+    <a 
+      href="{% url 'show-detail' show.id %}"
+      class="btn secondary"
+    >
+      Cancel
+    </a>
+    <button type="submit" class="btn danger">Delete {{ show.name }}</button>
+  </form>
+</div>
 
 {% endblock %}
