add body-container class to div on base template, adjust styling for main and .body-container to center content

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -17,7 +17,7 @@
   {% endblock %}
 </head>
 <body>
-  <div style="background-image: url({% static 'images/tv-snow.jpg' %})">
+  <div style="background-image: url({% static 'images/tv-snow.jpg' %})" class="body-container">
     <header>
       <a href="{% url 'home' %}">
         <div class="header-logo-container">
