--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -81,6 +81,14 @@ ul {
 main {
   width: 100%;
   padding: 0 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.body-container {
+  width: 100vw;
 }
 
 h2 {
@@ -196,7 +204,7 @@ nav li {
   }
 
   main {
-    max-width: 1300px;
+    /* max-width: 1300px; */
     min-height: calc(100vh - 53px);
   }
 
@@ -256,7 +264,7 @@ nav li {
   header {
     margin: 20px 20px 0 20px;
     width: calc(100vw - 40px);
-    max-width: 1920px;
+    /* max-width: 1920px; */
     top: 20px;
     background-color: transparent;
     border-bottom: none;
@@ -293,7 +301,7 @@ nav li {
 
     nav,
     .header-logo-container {
-      background: rgba(151, 79, 251, 0.65);
+      background: rgba(151, 79, 251, 0.75);
       -webkit-backdrop-filter: blur(3px);
       backdrop-filter: blur(3px);
     }
