--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -16,5 +16,14 @@
     <h2>My TV Collection</h2>
   </div>
 </section>
+<section class="form-container">
+  <form action="{% url 'home' %}" method="post" class="login">
+    <h1>Login</h1>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="hidden" name="next" value={{ next }}>
+    <button type="submit" class="btn submit">Login</button>
+  </form>
+</section>
 
 {% endblock %}
