implement signup functionality

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -36,8 +36,9 @@
             <li><a href="{% url 'about' %}">About 📺</a></li>
             <li><a href="{% url 'logout' %}">Log out 👋</a></li>
           {% else %}
-            <li><a href="{% url 'about' %}">About 📺</a></li>
             <li><a href="{% url 'login' %}">Login</a></li>
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
+            <li><a href="{% url 'about' %}">About 📺</a></li>
           {% endif %}
         </ul>
       </nav>
