update retro-tv-favi alt text

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -23,7 +23,7 @@
         <div class="header-logo-container">
           <img 
             src="{% static 'images/retro-tv-favi.png' %}"
-            alt="Temp My TV Collection Logo"
+            alt="Small retro television"
           >
           <h1>My TV Collection</h1>
         </div>
