--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -11,7 +11,7 @@
   <div class="tv-container">
     <img 
       src="{% static 'images/retro-tv-favi.png' %}"
-      alt="Temp My TV Collection Logo"
+      alt="Small retro television"
     >
     <h2>My TV Collection</h2>
   </div>
