--- a/main_app/static/css/shows/show-detail.css
+++ b/main_app/static/css/shows/show-detail.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(221, 218, 225, .95);
+  background-color: var(--card-bg-color);
   width: 75%;
   margin-top: 50px;
   border: var(--borders);
