--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -187,11 +187,13 @@ nav li {
 
 .page-content {
   font-size: var(--font-l);
-  background-color: rgb(221, 218, 225, .75);
+  background-color: var(--card-bg-color);
   padding: 15px;
   border: var(--borders);
   box-shadow: var(--card-box-shadow);
   border-radius: var(--card-border-radius);
+  width: 75%;
+  max-width: 1000px;
 }
 
 @media only screen and (min-width: 768px) {
