add new font, adjust font shadow color

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -26,9 +26,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 
-    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 
-    'Helvetica Neue', sans-serif;
+  font-family: "DotGothic16", sans-serif;
+  /* font-weight: 400;
+  font-style: normal; */
   min-height: 100vh;
   --nav-bg: rgba(151, 79, 251, 0.7);
   --nav-bg-ff: rgba(151, 79, 251, 0.75);
@@ -172,7 +172,7 @@ nav li {
   font-size: var(--font-xxl);
   margin: 0;
   color: rgb(221, 218, 225);
-  text-shadow: rgb(151, 79, 251, .75) 1px 0 10px;
+  text-shadow: rgb(151, 79, 251, .95) 1px 0 10px;
 }
 
 .page-header img {
