--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -12,6 +12,9 @@
     href="{% static 'images/retro-tv-favi.png' %}"
   >
   <title>My TV Collection</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
   {% block head %}
   {% endblock %}
