--- a/main_app/templates/shows/index.html
+++ b/main_app/templates/shows/index.html
@@ -40,8 +40,7 @@
             {% endif %}
           </div>
           <h2 class="card-title">{{ show.name }}</h2>
-          <p>{{ show.release_year }}</p>
-          <p>{{ show.streamer }}</p>
+          <h3>{{ show.release_year }} - {{ show.streamer }}</h3>
           <p>{{ show.description }}</p>
         </div>
       </a>
