--- a/main_app/static/css/shows/show-detail.css
+++ b/main_app/static/css/shows/show-detail.css
@@ -3,13 +3,14 @@
 }
 
 .show-container {
-  padding: 35px 30px;
+  padding: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: var(--card-bg-color);
   width: 75%;
+  height: 75%;
   margin-top: 30px;
   border: var(--borders);
   box-shadow: var(--card-box-shadow);
@@ -103,7 +104,7 @@
   /* min-width: 500px; */
   border: var(--borders);
   border-radius: var(--card-border-radius);
-  padding: 10px;
+  padding: 15px;
   box-shadow: var(--card-box-shadow);
   display: flex;
   flex-direction: column;
@@ -178,10 +179,10 @@
 
 @media only screen and (min-width: 768px) {
   .show-container {
-    padding: 35px 30px;
+    padding: 15px;
     flex-direction: row;
     align-items: center;
-    justify-content: start;
+    /* justify-content: start; */
   }
 
   .show-img {
