comment out show description on shows/index template

--- a/main_app/templates/shows/index.html
+++ b/main_app/templates/shows/index.html
@@ -41,7 +41,7 @@
           </div>
           <h2 class="card-title">{{ show.name }}</h2>
           <h3>{{ show.release_year }} - {{ show.streamer }}</h3>
-          <p>{{ show.description }}</p>
+          {% comment %} <p>{{ show.description }}</p> {% endcomment %}
         </div>
       </a>
     </div>
