--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -21,6 +21,7 @@ main > section {
 }
 
 .logo-container {
+  margin: 20px;
   max-width: 375px;
   text-shadow: rgb(151, 79, 251, .95) 1px 0 15px;
 }
@@ -28,16 +29,20 @@ main > section {
 .logo-container h2 {
   font-size: 5rem;
   color: white;
+  text-align: center;
 }
 
 .tv-container {
   display: flex;
-  width: 50%;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .tv-container img {
-  height: 50%;
-  width: 50%;
+  height: 25%;
+  width: 25%;
   filter: drop-shadow(0 0 1rem rgb(151, 79, 251, .75));
 }
 
