--- a/main_app/static/css/shows/show-detail.css
+++ b/main_app/static/css/shows/show-detail.css
@@ -1,5 +1,7 @@
 .show-episodes-container {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .show-container {
@@ -11,7 +13,7 @@
   background-color: var(--card-bg-color);
   width: 75%;
   height: 75%;
-  margin-top: 30px;
+  margin: 30px 15px 30px 15px;
   border: var(--borders);
   box-shadow: var(--card-box-shadow);
   border-radius: var(--card-border-radius);
@@ -36,10 +38,10 @@
 }
 
 .episodes-container {
-  margin: 30px;
+  margin: 30px 15px 30px 15px;
   display: flex;
   flex-direction: column;
-  padding-bottom: 20px;
+  /* padding-bottom: 20px; */
   align-items: center;
 }
 
@@ -109,7 +111,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   background-color: var(--card-bg-color);
 }
 
@@ -204,8 +206,8 @@
   } */
 }
 
-@media only screen and (min-width: 1024px) {
+/* @media only screen and (min-width: 1024px) {
   .episodes-container {
     padding: 0 40px;
   }
-}
+} */
