--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 75%;
-  background-color: rgb(221, 218, 225, .75);
+  background-color: var(--card-bg-color);
   padding: 15px;
   border: var(--borders);
   box-shadow: var(--card-box-shadow);
